[gd_scene load_steps=10 format=3 uid="uid://br1g54kl7g4ju"]

[ext_resource type="Script" uid="uid://lx7d4bj2sgk0" path="res://main_menu.gd" id="1_glbon"]
[ext_resource type="Texture2D" uid="uid://bge7xwdtwp3a7" path="res://source-image.jpg" id="2_nlkkf"]
[ext_resource type="Texture2D" uid="uid://31ungbrbqba2" path="res://play buttn.png" id="3_qe12f"]
[ext_resource type="Texture2D" uid="uid://cq4l6hk1dr0p4" path="res://htp_buton__1_-removebg-preview.png" id="4_8qtwp"]
[ext_resource type="Texture2D" uid="uid://mm58muottr7a" path="res://image-removebg-preview.png" id="5_dy7ct"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glbon"]
corner_radius_top_left = 17
corner_radius_bottom_right = 17
corner_radius_bottom_left = 17
corner_detail = 20

[sub_resource type="SystemFont" id="SystemFont_glbon"]

[sub_resource type="FontVariation" id="FontVariation_nlkkf"]
base_font = SubResource("SystemFont_glbon")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qe12f"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_glbon")
gamescene = "node_2d.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
physics_interpolation_mode = 1
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -3.0
offset_right = 30.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nlkkf")
expand_mode = 3
stretch_mode = 5

[node name="PlayButton" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.568627)
layout_mode = 0
offset_left = 17.0
offset_top = 37.0
offset_right = 250.0
offset_bottom = 270.0
scale = Vector2(0.02, 0.02)
action_mode = 0
texture_normal = ExtResource("3_qe12f")

[node name="HowToPlayButton" type="TextureButton" parent="."]
modulate = Color(0.65098, 0.643137, 0.545098, 0.611765)
self_modulate = Color(0.462745, 0.439216, 0.380392, 1)
texture_filter = 1
layout_mode = 0
offset_left = 43.0
offset_top = 2.0
offset_right = 807.0
offset_bottom = 329.0
scale = Vector2(0.02, 0.02)
texture_normal = ExtResource("4_8qtwp")

[node name="HowToPlayPanel" type="Panel" parent="HowToPlayButton"]
z_index = 1
texture_filter = 1
layout_mode = 0
offset_left = -2200.0
offset_top = 150.0
offset_right = -150.0
offset_bottom = 1450.0
theme_override_styles/panel = SubResource("StyleBoxFlat_glbon")

[node name="CloseButton" type="Button" parent="HowToPlayButton/HowToPlayPanel"]
modulate = Color(0.501961, 0.494118, 0.435294, 1)
self_modulate = Color(0.627451, 0.643137, 0.588235, 1)
texture_filter = 6
layout_mode = 0
offset_left = 2000.0
offset_top = -50.0
offset_right = 2508.0
offset_bottom = 458.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("5_dy7ct")
flat = true

[node name="GuideLabel" type="RichTextLabel" parent="HowToPlayButton/HowToPlayPanel"]
z_index = 2
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 250.0
offset_top = 50.0
offset_right = -1180.0
offset_bottom = -770.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
theme_override_fonts/normal_font = SubResource("FontVariation_nlkkf")
theme_override_styles/background = SubResource("StyleBoxFlat_qe12f")
bbcode_enabled = true
text = "[center]
[color=#4B2E2E]
[font_size=28][i][b]THE REGAL QUACK[/b][/i][/font_size]

[font_size=18]
You are a [b]brave duck warrior[/b], wandering through the ruins of a 
[b]zombie battlefield[/b].  
Your king has fallen in battle, and you struggle to return to his final funeral.  

Beware: [color=#8B0000][b]zombies still linger[/b][/color] after the war.  
Do not make contact with them, or you will lose your strength.  

Collect [b]food[/b] to survive and restore your courage.  

[font_size=20][i]Controls[/i][/font_size]  
[b]A / D[/b] → Move Left / Right  
[b]W[/b] → Jump  
[/font_size]

[font_size=16][color=#5C4033]
Survive… and honor your fallen king.
[/color][/font_size]
[/color]
[/center]
"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(20, 19)
zoom = Vector2(15, 15)
